Rydder bort gamle fordelingsregler som ikke lenger brukes (#309)