@@ -4,7 +4,13 @@ import static org.assertj.core.api.AssertionsForClassTypes.assertThat;
 
 import java.math.BigDecimal;
 import java.time.LocalDate;
-import java.util.List;
+import java.util.ArrayList;
+import java.util.Arrays;
+
+
+import no.nav.folketrygdloven.beregningsgrunnlag.fordel.modell.FordelAndelModell;
+import no.nav.folketrygdloven.beregningsgrunnlag.fordel.modell.FordelModell;
+import no.nav.folketrygdloven.beregningsgrunnlag.fordel.modell.FordelPeriodeModell;
 
 import org.junit.jupiter.api.Test;
 
@@ -12,9 +18,6 @@ import no.nav.folketrygdloven.beregningsgrunnlag.regelmodell.AktivitetStatus;
 import no.nav.folketrygdloven.beregningsgrunnlag.regelmodell.Periode;
 import no.nav.folketrygdloven.beregningsgrunnlag.regelmodell.grunnlag.inntekt.Arbeidsforhold;
 import no.nav.folketrygdloven.beregningsgrunnlag.regelmodell.grunnlag.inntekt.Inntektskategori;
-import no.nav.folketrygdloven.beregningsgrunnlag.regelmodell.resultat.BeregningsgrunnlagPeriode;
-import no.nav.folketrygdloven.beregningsgrunnlag.regelmodell.resultat.BeregningsgrunnlagPrArbeidsforhold;
-import no.nav.folketrygdloven.beregningsgrunnlag.regelmodell.resultat.BeregningsgrunnlagPrStatus;
 
 public class FastsettNyFordelingTest {
 
@@ -27,170 +30,141 @@ public class FastsettNyFordelingTest {
     @Test
     public void skal_flytte_beregningsgrunnlag_fra_SN_til_et_nytt_arbeidsforhold_uten_rest() {
         // Arrange
-        BigDecimal refusjonskrav1 = BigDecimal.valueOf(150_000);
-        BeregningsgrunnlagPrArbeidsforhold a1 = lagNyttArbeidsforhold(refusjonskrav1, 1L, ORGNR1);
+        var refusjonskrav1 = BigDecimal.valueOf(150_000);
+	    var a1 = lagNyttArbeidsforhold(refusjonskrav1, 1L, ORGNR1);
 
-        BeregningsgrunnlagPrStatus atfl = lagATFL(List.of(a1));
+	    var beregnetPrÅrSN = BigDecimal.valueOf(150_000);
+	    var sn = lagSN(beregnetPrÅrSN);
+	    var periode = new FordelPeriodeModell(Periode.of(LocalDate.now(), null), Arrays.asList(a1, sn));
 
-        BigDecimal beregnetPrÅrSN = BigDecimal.valueOf(150_000);
-        BeregningsgrunnlagPrStatus SN = lagSN(beregnetPrÅrSN);
-
-        BeregningsgrunnlagPeriode periode = BeregningsgrunnlagPeriode.builder()
-            .medBeregningsgrunnlagPrStatus(SN)
-            .medBeregningsgrunnlagPrStatus(atfl)
-            .medPeriode(Periode.of(STP, null))
-            .build();
-
-        // Act
+	    // Act
         kjørRegel(periode);
 
         // Assert
-        assertThat(a1.getFordeltPrÅr()).isEqualByComparingTo(BigDecimal.valueOf(150_000));
+        assertThat(a1.getFordeltPrÅr().orElseThrow()).isEqualByComparingTo(BigDecimal.valueOf(150_000));
         assertThat(a1.getInntektskategori()).isEqualTo(Inntektskategori.SELVSTENDIG_NÆRINGSDRIVENDE);
-        assertThat(SN.getFordeltPrÅr()).isEqualByComparingTo(BigDecimal.ZERO);
+        assertThat(sn.getFordeltPrÅr().orElseThrow()).isEqualByComparingTo(BigDecimal.ZERO);
     }
 
     @Test
     public void skal_flytte_beregningsgrunnlag_fra_SN_til_to_arbeidsforhold_uten_rest() {
         // Arrange
-        BigDecimal refusjonskrav1 = BigDecimal.valueOf(200_000);
-        BigDecimal beregnetPrÅr1 = BigDecimal.valueOf(100_000);
-        BeregningsgrunnlagPrArbeidsforhold a1 = lagArbeidsforhold(refusjonskrav1, beregnetPrÅr1, 1L, ORGNR1);
+        var refusjonskrav1 = BigDecimal.valueOf(200_000);
+	    var beregnetPrÅr1 = BigDecimal.valueOf(100_000);
+	    var a1 = lagArbeidsforhold(refusjonskrav1, beregnetPrÅr1, 1L, ORGNR1);
 
-        BigDecimal refusjonskrav2 = BigDecimal.valueOf(150_000);
-        BigDecimal beregnetPrÅr2 = BigDecimal.valueOf(100_000);
-        BeregningsgrunnlagPrArbeidsforhold a2 = lagArbeidsforhold(refusjonskrav2, beregnetPrÅr2, 2L, ORGNR2);
-
-        BeregningsgrunnlagPrStatus atfl = lagATFL(List.of(a1, a2));
+	    var refusjonskrav2 = BigDecimal.valueOf(150_000);
+	    var beregnetPrÅr2 = BigDecimal.valueOf(100_000);
+	    var a2 = lagArbeidsforhold(refusjonskrav2, beregnetPrÅr2, 2L, ORGNR2);
 
         BigDecimal beregnetPrÅrSN = BigDecimal.valueOf(150_000);
-        BeregningsgrunnlagPrStatus SN = lagSN(beregnetPrÅrSN);
-
-        BeregningsgrunnlagPeriode periode = BeregningsgrunnlagPeriode.builder()
-            .medBeregningsgrunnlagPrStatus(SN)
-            .medBeregningsgrunnlagPrStatus(atfl)
-            .medPeriode(Periode.of(STP, null))
-            .build();
+	    var sn = lagSN(beregnetPrÅrSN);
+	    var periode = new FordelPeriodeModell(Periode.of(LocalDate.now(), null), new ArrayList<>(Arrays.asList(a1, a2, sn)));
 
         // Act
         kjørRegel(periode);
 
         // Assert
-        var flyttetFraNæringArbeid1 = periode.getBeregningsgrunnlagPrStatus(AktivitetStatus.ATFL).getArbeidsforhold().stream()
+        var flyttetFraNæringArbeid1 = periode.getAlleAndelerForStatus(AktivitetStatus.AT).stream()
             .filter(a -> a.getArbeidsforhold().equals(a1.getArbeidsforhold()) && a.getInntektskategori().equals(Inntektskategori.SELVSTENDIG_NÆRINGSDRIVENDE))
-            .findFirst().get();
-        assertThat(flyttetFraNæringArbeid1.getFordeltPrÅr()).isEqualByComparingTo(BigDecimal.valueOf(100_000));
-        assertThat(a1.getBruttoPrÅr().get()).isEqualByComparingTo(BigDecimal.valueOf(100_000));
+            .findFirst().orElseThrow();
+        assertThat(flyttetFraNæringArbeid1.getFordeltPrÅr().orElseThrow()).isEqualByComparingTo(BigDecimal.valueOf(100_000));
+        assertThat(a1.getBruttoPrÅr().orElseThrow()).isEqualByComparingTo(BigDecimal.valueOf(100_000));
 
-        var flyttetFraNæringArbeid2 = periode.getBeregningsgrunnlagPrStatus(AktivitetStatus.ATFL).getArbeidsforhold().stream()
+        var flyttetFraNæringArbeid2 = periode.getAlleAndelerForStatus(AktivitetStatus.AT).stream()
             .filter(a -> a.getArbeidsforhold().equals(a2.getArbeidsforhold()) && a.getInntektskategori().equals(Inntektskategori.SELVSTENDIG_NÆRINGSDRIVENDE))
-            .findFirst().get();
-        assertThat(flyttetFraNæringArbeid2.getFordeltPrÅr()).isEqualByComparingTo(BigDecimal.valueOf(50_000));
-        assertThat(a2.getBruttoPrÅr().get()).isEqualByComparingTo(BigDecimal.valueOf(100_000));
+            .findFirst().orElseThrow();
+        assertThat(flyttetFraNæringArbeid2.getFordeltPrÅr().orElseThrow()).isEqualByComparingTo(BigDecimal.valueOf(50_000));
+        assertThat(a2.getBruttoPrÅr().orElseThrow()).isEqualByComparingTo(BigDecimal.valueOf(100_000));
 
-        assertThat(SN.getFordeltPrÅr()).isEqualByComparingTo(BigDecimal.ZERO);
+        assertThat(sn.getFordeltPrÅr().orElseThrow()).isEqualByComparingTo(BigDecimal.ZERO);
     }
 
 
     @Test
     public void skal_flytte_beregningsgrunnlag_fra_ett_arbeidsforhold_til_to_andre_arbeidsforhold_uten_rest() {
         // Arrange
-        BigDecimal refusjonskrav1 = BigDecimal.valueOf(200_000);
-        BigDecimal beregnetPrÅr1 = BigDecimal.valueOf(100_000);
-        BeregningsgrunnlagPrArbeidsforhold a1 = lagArbeidsforhold(refusjonskrav1, beregnetPrÅr1, 1L, ORGNR1);
+	    var refusjonskrav1 = BigDecimal.valueOf(200_000);
+	    var beregnetPrÅr1 = BigDecimal.valueOf(100_000);
+	    var a1 = lagArbeidsforhold(refusjonskrav1, beregnetPrÅr1, 1L, ORGNR1);
 
-        BigDecimal refusjonskrav2 = BigDecimal.valueOf(150_000);
-        BigDecimal beregnetPrÅr2 = BigDecimal.valueOf(100_000);
-        BeregningsgrunnlagPrArbeidsforhold a2 = lagArbeidsforhold(refusjonskrav2, beregnetPrÅr2, 2L, ORGNR2);
+	    var refusjonskrav2 = BigDecimal.valueOf(150_000);
+	    var beregnetPrÅr2 = BigDecimal.valueOf(100_000);
+	    var a2 = lagArbeidsforhold(refusjonskrav2, beregnetPrÅr2, 2L, ORGNR2);
 
-        BigDecimal refusjonskrav3 = BigDecimal.ZERO;
-        BigDecimal beregnetPrÅr3 = BigDecimal.valueOf(150_000);
-        BeregningsgrunnlagPrArbeidsforhold a3 = lagArbeidsforhold(refusjonskrav3, beregnetPrÅr3, 3L, ORGNR3);
+	    var refusjonskrav3 = BigDecimal.ZERO;
+	    var beregnetPrÅr3 = BigDecimal.valueOf(150_000);
+	    var a3 = lagArbeidsforhold(refusjonskrav3, beregnetPrÅr3, 3L, ORGNR3);
 
-        BeregningsgrunnlagPrStatus atfl = lagATFL(List.of(a1, a2, a3));
-
-        BeregningsgrunnlagPeriode periode = BeregningsgrunnlagPeriode.builder()
-            .medBeregningsgrunnlagPrStatus(atfl)
-            .medPeriode(Periode.of(STP, null))
-            .build();
+	    var periode = new FordelPeriodeModell(Periode.of(LocalDate.now(), null), Arrays.asList(a1, a2, a3));
 
         // Act
         kjørRegel(periode);
 
         // Assert
-        assertThat(a1.getFordeltPrÅr()).isEqualByComparingTo(refusjonskrav1);
-        assertThat(a2.getFordeltPrÅr()).isEqualByComparingTo(refusjonskrav2);
-        assertThat(a3.getFordeltPrÅr()).isEqualByComparingTo(BigDecimal.ZERO);
+        assertThat(a1.getFordeltPrÅr().orElseThrow()).isEqualByComparingTo(refusjonskrav1);
+        assertThat(a2.getFordeltPrÅr().orElseThrow()).isEqualByComparingTo(refusjonskrav2);
+        assertThat(a3.getFordeltPrÅr().orElseThrow()).isEqualByComparingTo(BigDecimal.ZERO);
     }
 
     @Test
     public void skal_ikkje_omfordele() {
         // Arrange
-        BigDecimal refusjonskrav1 = BigDecimal.valueOf(200_000);
-        BigDecimal beregnetPrÅr1 = BigDecimal.valueOf(200_000);
-        BeregningsgrunnlagPrArbeidsforhold a1 = lagArbeidsforhold(refusjonskrav1, beregnetPrÅr1, 1L, ORGNR1);
+        var refusjonskrav1 = BigDecimal.valueOf(200_000);
+	    var beregnetPrÅr1 = BigDecimal.valueOf(200_000);
+	    var a1 = lagArbeidsforhold(refusjonskrav1, beregnetPrÅr1, 1L, ORGNR1);
 
-        BigDecimal refusjonskrav2 = BigDecimal.valueOf(150_000);
-        BigDecimal beregnetPrÅr2 = BigDecimal.valueOf(150_000);
-        BeregningsgrunnlagPrArbeidsforhold a2 = lagArbeidsforhold(refusjonskrav2, beregnetPrÅr2, 2L, ORGNR2);
+	    var refusjonskrav2 = BigDecimal.valueOf(150_000);
+	    var beregnetPrÅr2 = BigDecimal.valueOf(150_000);
+	    var a2 = lagArbeidsforhold(refusjonskrav2, beregnetPrÅr2, 2L, ORGNR2);
 
-        BigDecimal refusjonskrav3 = BigDecimal.ZERO;
-        BigDecimal beregnetPrÅr3 = BigDecimal.valueOf(150_000);
-        BeregningsgrunnlagPrArbeidsforhold a3 = lagArbeidsforhold(refusjonskrav3, beregnetPrÅr3, 3L, ORGNR3);
+	    var refusjonskrav3 = BigDecimal.ZERO;
+	    var beregnetPrÅr3 = BigDecimal.valueOf(150_000);
+	    var a3 = lagArbeidsforhold(refusjonskrav3, beregnetPrÅr3, 3L, ORGNR3);
 
-        BeregningsgrunnlagPrStatus atfl = lagATFL(List.of(a1, a2, a3));
+	    var periode = new FordelPeriodeModell(Periode.of(LocalDate.now(), null), Arrays.asList(a1, a2, a3));
 
-        BeregningsgrunnlagPeriode periode = BeregningsgrunnlagPeriode.builder()
-            .medBeregningsgrunnlagPrStatus(atfl)
-            .medPeriode(Periode.of(STP, null))
-            .build();
-
-        // Act
+	    // Act
         kjørRegel(periode);
 
         // Assert
-        assertThat(a1.getFordeltPrÅr()).isNull();
-        assertThat(a2.getFordeltPrÅr()).isNull();
-        assertThat(a3.getFordeltPrÅr()).isNull();
+        assertThat(a1.getFordeltPrÅr()).isEmpty();
+        assertThat(a2.getFordeltPrÅr()).isEmpty();
+        assertThat(a3.getFordeltPrÅr()).isEmpty();
     }
 
 
-    private void kjørRegel(BeregningsgrunnlagPeriode periode) {
-        FastsettNyFordeling regel = new FastsettNyFordeling(periode);
-        regel.getSpecification().evaluate(periode);
+    private void kjørRegel(FordelPeriodeModell periode) {
+        FastsettNyFordeling regel = new FastsettNyFordeling(new FordelModell(periode));
+        regel.getSpecification().evaluate(new FordelModell(periode));
     }
 
-    private BeregningsgrunnlagPrStatus lagATFL(List<BeregningsgrunnlagPrArbeidsforhold> arbeidsforholdList) {
-        BeregningsgrunnlagPrStatus.Builder builder = BeregningsgrunnlagPrStatus.builder()
-            .medAktivitetStatus(AktivitetStatus.ATFL);
-        arbeidsforholdList.forEach(builder::medArbeidsforhold);
-        return builder.build();
-    }
-
-    private BeregningsgrunnlagPrArbeidsforhold lagArbeidsforhold(BigDecimal refusjonskravPrÅr, BigDecimal beregnetPrÅr, Long andelsnr, String orgnr) {
-        return BeregningsgrunnlagPrArbeidsforhold.builder()
+    private FordelAndelModell lagArbeidsforhold(BigDecimal refusjonskravPrÅr, BigDecimal beregnetPrÅr, Long andelsnr, String orgnr) {
+        return FordelAndelModell.builder()
             .medAndelNr(andelsnr)
             .medArbeidsforhold(Arbeidsforhold.nyttArbeidsforholdHosVirksomhet(orgnr, null))
             .medInntektskategori(Inntektskategori.ARBEIDSTAKER)
+	        .medAktivitetStatus(AktivitetStatus.AT)
             .medGjeldendeRefusjonPrÅr(refusjonskravPrÅr)
-            .medBeregnetPrÅr(beregnetPrÅr)
+            .medForeslåttPrÅr(beregnetPrÅr)
             .build();
     }
 
-    private BeregningsgrunnlagPrArbeidsforhold lagNyttArbeidsforhold(BigDecimal refusjonskravPrÅr, Long andelsnr, String orgnr) {
-        return BeregningsgrunnlagPrArbeidsforhold.builder()
+    private FordelAndelModell lagNyttArbeidsforhold(BigDecimal refusjonskravPrÅr, Long andelsnr, String orgnr) {
+        return FordelAndelModell.builder()
             .medAndelNr(andelsnr)
+	        .medAktivitetStatus(AktivitetStatus.AT)
             .medArbeidsforhold(Arbeidsforhold.nyttArbeidsforholdHosVirksomhet(orgnr, null))
             .medGjeldendeRefusjonPrÅr(refusjonskravPrÅr)
             .build();
     }
 
-    private BeregningsgrunnlagPrStatus lagSN(BigDecimal beregnetPrÅr1) {
-        return BeregningsgrunnlagPrStatus.builder()
+    private FordelAndelModell lagSN(BigDecimal beregnetPrÅr1) {
+        return FordelAndelModell.builder()
             .medAndelNr(2L)
             .medAktivitetStatus(AktivitetStatus.SN)
             .medInntektskategori(Inntektskategori.SELVSTENDIG_NÆRINGSDRIVENDE)
-            .medBeregnetPrÅr(beregnetPrÅr1).build();
+            .medForeslåttPrÅr(beregnetPrÅr1).build();
     }
 
 
